--- a/app/src/main/res/layout/fragment_add_delivery_address.xml
+++ b/app/src/main/res/layout/fragment_add_delivery_address.xml
@@ -82,6 +82,7 @@
                 android:textSize="@dimen/space_14" />
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
@@ -103,6 +104,7 @@
 
 
             <EditText
+                android:visibility="gone"
                 android:id="@+id/et_add_adres_pin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -207,7 +209,7 @@
                 android:padding="5dp"
                 android:id="@+id/et_add_address"
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
+                android:layout_height="120dp"
                 android:layout_marginBottom="@dimen/space_5"
                 android:layout_marginTop="@dimen/space_4"
                 android:background="@drawable/xml_textbox_bg"
