--- a/app/src/main/res/layout/fragment_delivery_time.xml
+++ b/app/src/main/res/layout/fragment_delivery_time.xml
@@ -18,7 +18,9 @@
         android:text="@string/tv_del_title"
         android:textSize="@dimen/text_size_normal"
         android:textStyle="bold" />
+
     <Fonts.LatoBLack
+        android:visibility="gone"
         android:id="@+id/onlyforpreorder"
         android:layout_below="@id/txtdelivery"
         android:layout_width="match_parent"
@@ -29,6 +31,7 @@
         android:text="@string/onlyforpreorder"
         android:textSize="@dimen/text_size_normal"
         />
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -43,6 +46,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/radioLinear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -108,6 +112,7 @@
                     android:orientation="horizontal">
 
                     <Fonts.LatoBLack
+                        android:visibility="gone"
                         android:id="@+id/textView9"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -127,18 +132,14 @@
                         android:id="@+id/tv_deli_add_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-
-                        android:layout_marginTop="12dp"
-                        android:layout_marginEnd="12dp"
-                        android:layout_marginBottom="12dp"
+                        android:layout_margin="10dp"
                         android:background="@drawable/bg_rounded_button">
 
                         <Fonts.LatoBLack
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="@string/tv_pro_add"
+                            android:text="@string/tv_pro_add_address"
                             android:layout_marginLeft="20dp"
                             android:layout_marginRight="20dp"
                             android:layout_marginTop="10dp"
