--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     xmlns:shimmer="http://schemas.android.com/tools"
-
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
@@ -43,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="Product"
+            android:text="Name"
             android:layout_centerVertical="true"
             android:textColor="@color/white"/>
         <ImageView
@@ -69,12 +68,13 @@
 
     <TextView
         android:id="@+id/info"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginStart="@dimen/space_10"
+        android:textSize="16sp"
+        android:layout_margin="@dimen/space_10"
         android:textColor="@color/black"/>
     <TextView
+        android:visibility="gone"
         android:id="@+id/des"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
