--- a/app/src/main/res/layout/b_row_carty.xml
+++ b/app/src/main/res/layout/b_row_carty.xml
@@ -127,9 +127,31 @@
                     android:textColor="@android:color/holo_red_dark"
                     android:textSize="@dimen/text_size_small" />
 
-
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <Fonts.LatoBLack
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:id="@+id/tv_color"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_small" />
+
+                <Fonts.LatoBLack
+                    android:id="@+id/tv_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_small" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
