--- a/app/src/main/res/layout/fragment_deal.xml
+++ b/app/src/main/res/layout/fragment_deal.xml
@@ -56,6 +56,15 @@
 
 <!--    </RelativeLayout>-->
 
+    <TextView
+        android:id="@+id/no_prod"
+        android:visibility="gone"
+        android:textStyle="italic"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_product"
+        />
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_view_container"
         android:layout_width="wrap_content"
