--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -14,7 +14,7 @@
         android:fillViewport="true">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ImageView
@@ -186,6 +186,7 @@
 
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/space_3"
@@ -264,17 +265,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 >
+                <TextView
+                    android:layout_marginTop="-10dp"
+                    android:id="@+id/colorrooo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/color"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:maxLines="1"
+                    />
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
+                    android:layout_below="@id/colorrooo"
                     android:layout_marginStart="10dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/colorrecycler"
                     />
+                <TextView
+                    android:layout_below="@id/colorrecycler"
+                    android:id="@+id/size_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/size"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:maxLines="1"
+                    />
                 <androidx.recyclerview.widget.RecyclerView
-                    android:layout_marginTop="30dp"
                     android:layout_marginStart="10dp"
                     android:layout_width="match_parent"
-                    android:layout_below="@id/colorrecycler"
+                    android:layout_below="@id/size_text"
                     android:layout_height="wrap_content"
                     android:id="@+id/sizerecyler"
                     />
