--- a/app/src/main/res/layout/row_delivery_time_rv_test.xml
+++ b/app/src/main/res/layout/row_delivery_time_rv_test.xml
@@ -19,7 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="@color/green"
+            android:background="@color/white"
             android:gravity="center"
             android:tag="Bottom3"
             android:weightSum="10">
@@ -27,28 +27,27 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
                 <Button
+                    android:layout_marginStart="10dp"
                     android:id="@+id/edit"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/bg_rounded_button"
                     android:text="@string/edit"
-                    android:textColor="@color/green" />
+                    android:textColor="@color/white" />
 
                 <Button
+                    android:layout_marginEnd="10dp"
                     android:id="@+id/delete"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_alignTop="@+id/edit"
                     android:background="@drawable/bg_rounded_button"
                     android:text="@string/delete"
-                    android:textColor="@color/green" />
+                    android:textColor="@color/white" />
             </RelativeLayout>
         </LinearLayout>
 
