--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -266,8 +266,9 @@
                 android:layout_height="wrap_content"
                 >
                 <TextView
+                    android:visibility="gone"
+                    android:id="@+id/color_text"
                     android:layout_marginTop="-10dp"
-                    android:id="@+id/colorrooo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/color"
@@ -278,7 +279,7 @@
                     />
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
-                    android:layout_below="@id/colorrooo"
+                    android:layout_below="@id/color_text"
                     android:layout_marginStart="10dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/colorrecycler"
@@ -388,6 +389,7 @@
             <RelativeLayout
                 android:padding="@dimen/space_5"
                 android:id="@+id/rl1"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/rl5"
