--- a/app/src/main/res/layout/activity_payment_method.xml
+++ b/app/src/main/res/layout/activity_payment_method.xml
@@ -13,11 +13,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -40,20 +40,20 @@
                             <Fonts.LatoBLack
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/space_12"
+                                android:layout_marginStart="@dimen/space_12"
                                 android:text="@string/order_amount"
                                 android:textColor="#000"
-                                android:textSize="14sp" />
+                                android:textSize="16sp" />
 
                             <Fonts.LatoBLack
                                 android:id="@+id/order_ammount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_alignParentRight="true"
-                                android:layout_marginRight="140dp"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginEnd="140dp"
                                 android:text=""
                                 android:textColor="#000"
-                                android:textSize="14sp" />
+                                android:textSize="16sp" />
 
 
                         </RelativeLayout>
@@ -77,20 +77,20 @@
                                 <Fonts.LatoBLack
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="@dimen/space_12"
+                                    android:layout_marginStart="@dimen/space_12"
                                     android:text="@string/wallet"
                                     android:textColor="#000"
-                                    android:textSize="@dimen/text_size_small" />
+                                    android:textSize="14sp" />
 
                                 <Fonts.LatoBLack
                                     android:id="@+id/used_wallet_ammount"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_alignParentRight="true"
-                                    android:layout_marginRight="@dimen/space_12"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_marginEnd="@dimen/space_12"
                                     android:text=""
                                     android:textColor="#000"
-                                    android:textSize="@dimen/text_size_small" />
+                                    android:textSize="14sp" />
 
 
                             </RelativeLayout>
@@ -106,21 +106,20 @@
                                 <Fonts.LatoBLack
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="@dimen/space_12"
+                                    android:layout_marginStart="@dimen/space_12"
                                     android:text="@string/coupon_used"
                                     android:textColor="#000"
-                                    android:textSize="@dimen/text_size_small" />
+                                    android:textSize="14sp" />
 
                                 <Fonts.LatoBLack
                                     android:id="@+id/used_coupon_ammount"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_alignParentRight="true"
-                                    android:layout_marginRight="@dimen/space_12"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_marginEnd="@dimen/space_12"
                                     android:text=""
                                     android:textColor="#000"
-                                    android:textSize="@dimen/text_size_small" />
-
+                                    android:textSize="14sp" />
 
                             </RelativeLayout>
 
@@ -144,21 +143,21 @@
                             <Fonts.LatoBLack
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/space_12"
+                                android:layout_marginStart="@dimen/space_12"
                                 android:text="@string/amount_pa"
                                 android:textColor="#000"
-                                android:textSize="14sp" />
+                                android:textSize="16sp" />
 
                             <Fonts.LatoBLack
                                 android:id="@+id/payable_ammount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_alignParentRight="true"
-                                android:layout_marginRight="140dp"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginEnd="140dp"
                                 android:text=""
                                 android:textStyle="bold"
                                 android:textColor="#000"
-                                android:textSize="14sp" />
+                                android:textSize="16sp" />
 
 
                         </RelativeLayout>
@@ -192,22 +191,20 @@
                                         <Fonts.LatoBLack
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:layout_marginLeft="@dimen/space_12"
+                                            android:layout_marginStart="@dimen/space_12"
                                             android:text="@string/use"
                                             android:textColor="@color/green"
-                                            android:textSize="@dimen/text_size_normal" />
+                                            android:textSize="20sp" />
 
                                         <CheckBox
                                             android:id="@+id/use_wallet"
                                             style="@android:style/Widget.CompoundButton.RadioButton"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:layout_marginLeft="@dimen/space_4"
-                                            android:layout_marginRight="@dimen/space_4"
-                                            android:layout_marginTop="@dimen/space_4"
+                                            android:layout_margin="@dimen/space_4"
                                             android:gravity="center"
                                             android:text="@string/tv_app_name"
-                                            android:textSize="@dimen/text_size_small" />
+                                            android:textSize="16sp" />
 
                                     </LinearLayout>
 
@@ -241,20 +238,19 @@
                                             android:textSize="@dimen/text_size_normal" />
                                     </LinearLayout>
 
-
                                 </LinearLayout>
-
 
                             </LinearLayout>
 
-
                             <View
                                 android:layout_width="match_parent"
-                                android:layout_height="2dp"
-                                android:layout_marginTop="@dimen/space_4"
+                                android:layout_height="3dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginBottom="5dp"
                                 android:background="@color/gray" />
 
                             <LinearLayout
+                                android:visibility="gone"
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/select_payment_method"
                                 android:layout_gravity="center"
@@ -264,11 +260,11 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
                                     android:layout_gravity="center"
-                                    android:layout_marginLeft="@dimen/space_12"
+                                    android:layout_marginStart="@dimen/space_12"
                                     android:gravity="center"
                                     android:text="@string/pay"
                                     android:textColor="#000"
-                                    android:textSize="@dimen/text_size_normal"
+                                    android:textSize="20sp"
                                     android:textStyle="bold" />
 
 
@@ -276,63 +272,60 @@
 
 
                             <View
+                                android:visibility="gone"
                                 android:layout_width="match_parent"
                                 android:layout_height="2dp"
-                                android:layout_marginTop="@dimen/space_4"
+                                android:layout_marginTop="5dp"
                                 android:background="@color/gray" />
-
 
                             <Fonts.LatoBLack
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/space_12"
+                                android:layout_marginStart="@dimen/space_12"
                                 android:layout_marginTop="@dimen/space_6"
                                 android:text="@string/paymentmentord"
                                 android:textColor="@color/green"
-                                android:textSize="@dimen/text_size_normal" />
+                                android:textSize="20sp" />
 
 
                             <RadioButton
                                 android:id="@+id/use_store_pickup"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/space_4"
+                                android:layout_margin="@dimen/space_4"
                                 android:visibility="gone"
-                                android:layout_marginRight="@dimen/space_4"
                                 android:text="@string/store"
-                                android:textSize="14sp" />
+                                android:textSize="16sp" />
 
                             <RadioButton
                                 android:id="@+id/use_COD"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/space_4"
-                                android:layout_marginRight="@dimen/space_4"
+                                android:layout_margin="@dimen/space_4"
                                 android:text="@string/cash"
-                                android:textSize="14sp" />
+                                android:textSize="16sp" />
 
                             <RadioGroup
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
 
                                 <RadioButton
+                                    android:visibility="gone"
                                     android:id="@+id/use_COD_new"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:visibility="gone"
-                                    android:layout_marginLeft="@dimen/space_4"
-                                    android:layout_marginRight="@dimen/space_4"
+                                    android:layout_margin="@dimen/space_4"
                                     android:text="@string/cash"
-                                    android:textSize="14sp" />
+                                    android:textSize="16sp" />
 
                                 <RadioButton
+                                    android:visibility="gone"
                                     android:id="@+id/use_googlepay"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="@dimen/space_4"
-                                    android:layout_marginRight="@dimen/space_4"
+                                    android:layout_margin="@dimen/space_4"
                                     android:text="@string/googlepay"
-                                    android:textSize="14sp" />
+                                    android:textSize="16sp" />
 
                                 <RadioButton
                                     android:visibility="gone"
@@ -510,22 +503,22 @@
                         </RadioGroup>
                         <EditText
                             android:layout_width="match_parent"
-                            android:layout_height="100dp"
+                            android:layout_height="150dp"
                             android:hint="@string/nav_note"
                             android:layout_margin="10dp"
                             android:id="@+id/extra_note"
+                            android:textSize="18sp"
                             android:gravity="top"
                             android:background="@drawable/bg21"
                             android:padding="5dp"/>
+
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
-
-
             <RelativeLayout
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 android:id="@+id/confirm_order"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -538,8 +531,7 @@
                     android:gravity="center"
                     android:text="@string/confirm_order"
                     android:textColor="#fff"
-                    android:textSize="14sp" />
-
+                    android:textSize="18sp" />
 
             </RelativeLayout>
 
