--- a/app/src/main/res/layout/activity_reward_points.xml
+++ b/app/src/main/res/layout/activity_reward_points.xml
@@ -20,7 +20,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/rewardscup"
         android:gravity="center">
 
@@ -55,13 +55,13 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/gif_size"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="center"
         android:orientation="vertical">
@@ -70,7 +70,8 @@
             android:id="@+id/gif_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            />
 
     </LinearLayout>
 
