--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -60,12 +60,11 @@
             android:padding="@dimen/space_5"
             app:cardElevation="@dimen/space_4">
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_margin="5dp"
         android:id="@+id/collapsing_recycler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
         />
         </androidx.cardview.widget.CardView>
         <View
