--- a/app/src/main/res/layout/row_delivery_time_rv_test.xml
+++ b/app/src/main/res/layout/row_delivery_time_rv_test.xml
@@ -5,7 +5,7 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="@dimen/space_3"
+    app:cardElevation="4dp"
     app:cardUseCompatPadding="true"
     card_view:cardCornerRadius="4dp">
 
@@ -55,7 +55,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:elevation="5dp"
             android:orientation="vertical"
             android:padding="@dimen/space_8">
 
@@ -67,7 +66,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/rb_adres"
                     android:layout_toStartOf="@+id/rb_adres"
                     android:orientation="vertical">
 
@@ -75,7 +73,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
-
 
                         <Fonts.LatoBLack
                             android:id="@+id/textView15"
@@ -88,7 +85,6 @@
                             android:id="@+id/tv_adres_username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/space_2"
                             android:layout_marginStart="@dimen/space_2"
                             android:text="TextView"
                             android:textColor="#000" />
@@ -112,7 +108,6 @@
                             android:id="@+id/tv_adres_address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/space_2"
                             android:layout_marginStart="@dimen/space_2"
                             android:text="TextView"
                             android:textColor="#000" />
@@ -136,7 +131,6 @@
                             android:id="@+id/tv_adres_phone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/space_2"
                             android:layout_marginStart="@dimen/space_2"
                             android:text="TextView"
                             android:textColor="#000" />
@@ -160,7 +154,6 @@
                             android:id="@+id/tv_adres_charge"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/space_2"
                             android:layout_marginStart="@dimen/space_2"
                             android:text="TextView"
                             android:textColor="#000" />
@@ -172,9 +165,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/space_8" />
+                    android:layout_marginStart="@dimen/space_8" />
 
             </RelativeLayout>
         </LinearLayout>
