--- a/app/src/main/res/layout/fragment_terms_condition.xml
+++ b/app/src/main/res/layout/fragment_terms_condition.xml
@@ -11,10 +11,13 @@
         android:fillViewport="true">
 
         <TextView
+            android:layout_marginTop="10dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             android:id="@+id/tv_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/space_8"/>
+            android:padding="10dp"/>
     </ScrollView>
 
 </LinearLayout>
