--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -184,10 +184,6 @@
                         android:textSize="18sp"
                         android:textColor="@color/white" />
 
-
-
-
-
                 </LinearLayout>
             </LinearLayout>
 
@@ -196,13 +192,15 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/checkout"
-                android:padding="12dp"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:background="@drawable/butonshape"
                 android:textColor="#fff"
                 android:textSize="20sp" />
-
 
         </RelativeLayout>
 
