--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -404,14 +404,29 @@
                 </RelativeLayout>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
             <CheckBox
                 android:id="@+id/checkbox1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/agree"
                 android:layout_marginTop="@dimen/space_10"
                 android:layout_marginBottom="5dp"/>
+                <TextView
+                    android:id="@+id/agree"
+                    android:text="@string/agree"
+                    android:layout_marginTop="@dimen/space_10"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    />
 
+
+            </LinearLayout>
             <RelativeLayout
                 android:id="@+id/btnRegister"
                 android:layout_width="wrap_content"
