--- a/app/src/main/res/layout/fragment_my_order_detail.xml
+++ b/app/src/main/res/layout/fragment_my_order_detail.xml
@@ -94,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_margin="12dp"
-            android:background="@drawable/bg_rounded_button"
+            android:background="@drawable/bg_cancel"
             android:padding="12dp">
 
             <Fonts.LatoBLack
