--- a/app/src/main/res/layout/row_my_past_order_rv.xml
+++ b/app/src/main/res/layout/row_my_past_order_rv.xml
@@ -159,7 +159,6 @@
             android:orientation="horizontal"
             android:weightSum="2">
 
-
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -215,25 +214,22 @@
                 <RelativeLayout
                     android:id="@+id/relative_background"
                     android:layout_width="wrap_content"
-                    android:layout_height="38dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/space_10"
                     android:layout_marginRight="@dimen/space_10"
                     android:layout_marginTop="@dimen/space_14"
                     android:gravity="center"
-                    android:background="@drawable/bg_rounded_button">
+                    android:background="@drawable/bg_cancel">
 
                     <Fonts.LatoBLack
                         android:id="@+id/status"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="Ram"
+                        android:text="@string/canceled"
                         android:textColor="#fff"
-                        android:textSize="@dimen/text_size_small" />
-
-
+                        android:textSize="14sp" />
                 </RelativeLayout>
-
 
             </LinearLayout>
 
