--- a/app/src/main/res/drawable-hdpi-v9/bg_cancel.xml
+++ b/app/src/main/res/drawable-hdpi-v9/bg_cancel.xml
@@ -5,13 +5,13 @@
     tools:targetApi="lollipop">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/red_btn_bg_color" />
+            <solid android:color="@color/red" />
             <padding
                 android:bottom="8dp"
                 android:left="12dp"
                 android:right="12dp"
                 android:top="8dp" />
-            <corners android:radius="15dp" />
+<!--            <corners android:radius="15dp" />-->
         </shape>
     </item>
 
