--- a/app/src/main/res/layout/row_my_past_order_rv.xml
+++ b/app/src/main/res/layout/row_my_past_order_rv.xml
@@ -83,6 +83,7 @@
                     android:textSize="@dimen/text_size_small" />
 
                 <Fonts.LatoBLack
+                    android:visibility="gone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".3"
@@ -93,6 +94,7 @@
                     android:textSize="@dimen/text_size_small" />
 
                 <Fonts.LatoBLack
+                    android:visibility="gone"
                     android:id="@+id/tv_order_time"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -577,9 +579,7 @@
                 </LinearLayout>
             </LinearLayout>
 
-
         </LinearLayout>
-
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
