--- a/app/src/main/res/drawable/xml_budget.xml
+++ b/app/src/main/res/drawable/xml_budget.xml
@@ -3,13 +3,13 @@
     android:shape="rectangle">
     <corners android:radius="8dp" />
     <solid android:color="#f20000" />
-    <stroke
-        android:width="2dip"
-        android:color="#F00" />
-    <padding
-        android:bottom="5dp"
-        android:left="5dp"
-        android:right="5dp"
-
-        android:top="5dp" />
+<!--    <stroke-->
+<!--        android:width="2dip"-->
+<!--        android:color="#F00" />-->
+<!--    <padding-->
+<!--        android:bottom="5dp"-->
+<!--        android:left="5dp"-->
+<!--        android:right="5dp"-->
+<!--        android:top="5dp"-->
+<!--        />-->
 </shape>
