--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -149,18 +149,16 @@
             >
 
             <TextView
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
                 android:layout_marginTop="2dp"
                 android:id="@+id/actionbar_notifcation_textview"
-                android:layout_width="14dp"
-                android:layout_height="14dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:gravity="center"
-                android:textAlignment="center"
                 android:background="@drawable/xml_budget"
-                android:layout_gravity="center"
-                android:padding="1dp"
-                android:text="99"
+                android:layout_gravity="center_vertical"
+                android:text="0"
                 android:textColor="#ffffff"
                 android:textSize="8sp" />
 
