--- a/app/src/main/res/layout/fragment_confirm_bill.xml
+++ b/app/src/main/res/layout/fragment_confirm_bill.xml
@@ -316,6 +316,8 @@
                         </TableRow>
 
                         <TableRow
+                            android:visibility="gone"
+                            android:id="@+id/fd_tablerow"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <TextView
